[package]
name = "load-calculator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
shuttle-axum = "0.50.0"
shuttle-runtime = "0.50.0"
axum = "0.7.4"
reqwest = "0.12.12"
tokio = {version = "1.44.1", features = ["full"]}
tower-http = {version = "0.6.2", features = ["timeout"]}
serde = "1.0.219"
serde_json = "1.0.140"
